# hsaml2

./: .gitignore  .travis.yml  README.md  SAML2.hs  Setup.hs  hsaml2.cabal  package.yaml  stack.yaml
.github/workflows/: main.yml
SAML2/: Bindings.hs  Core.hs  Lens.hs  Metadata.hs  Profiles.hs  Version.hs  XML.hs
SAML2/Bindings/: General.hs  HTTPPOST.hs  HTTPRedirect.hs  Identifiers.hs  Internal.hs
SAML2/Core/: Assertions.hs  Datatypes.hs  Identifiers.hs  Namespaces.hs  Protocols.hs  Signature.hs  Versioning.hs
SAML2/Metadata/: Metadata.hs
SAML2/Profiles/: ConfirmationMethod.hs
SAML2/XML/: ASN1.hs  Canonical.hs  Encryption.hs  LibXML2.hsc  Lint.hs  Pickle.hs  Schema.hs  Signature.hs  Types.hs  libxml2_stub.c
SAML2/XML/Schema/: Datatypes.hs
SAML2/XML/Signature/: Schema.hs  Types.hs
test/: Main.hs  XML.hs
test/Bindings/: HTTPRedirect.hs
test/Metadata/: Metadata.hs  metadata-idp-azure.xml  metadata-idp.xml  metadata-nyu.xml  metadata-osf.xml  metadata-sp.xml
test/XML/: Canonical.hs  Encryption.hs  Keys.hs  Signature.hs  encryption-example.xml  noncanonical1.xml  noncanonical7.xml  signature-example-dsa.README  signature-example-dsa.xml  signature-example-rsa.README  signature-example-rsa.xml  signature-example.xml
