name:                hsaml2
version:             0
synopsis:            OASIS Security Assertion Markup Language (SAML) V2.0
description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Dylan Simon
maintainer:          dylan@dylex.net
copyright:           2016
category:            Security, Network, Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files:
  test/XML/signature-example.xml

library
  exposed-modules:
    SAML2.XML
    SAML2.XML.Schema
    SAML2.XML.Schema.Datatypes
    SAML2.XML.Signature
    SAML2.XML.Encryption
    SAML2.XML.Types
    SAML2.Version
    SAML2.Core
    SAML2.Core.Namespaces
    SAML2.Core.Datatypes
    SAML2.Core.Assertions
    SAML2.Core.Identifiers
    SAML2.Profiles
    SAML2.Profiles.ConfirmationMethod
  other-modules:
    SAML2.XML.Pickle
  build-depends:       
    base >=4.8 && <5,
    bytestring,
    time,
    network-uri,
    hxt,
    hxt-charproperties,
    semigroups,
    invertible,
    base64-bytestring,
    cryptonite
  default-language:    Haskell2010
  ghc-options: -Wall

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base,
    network-uri,
    hxt,
    hxt-http,
    semigroups,
    hsaml2,
    HUnit
