name:                hsaml2
version:             0
synopsis:            OASIS Security Assertion Markup Language (SAML) V2.0
description:         
license:             Apache-2.0
license-file:        LICENSE
author:              Dylan Simon
maintainer:          dylan@dylex.net
copyright:           2016
category:            Security, Network, Web
build-type:          Custom
cabal-version:       >=1.10
tested-with:         GHC == 7.10.3

extra-source-files:
  test/XML/signature-example.xml
  test/XML/encryption-example.xml

source-repository head
  type: git
  location: https://github.com/dylex/hsaml2

library
  exposed-modules:
    SAML2.XML
    SAML2.XML.Schema
    SAML2.XML.Schema.Datatypes
    SAML2.XML.Canonical
    SAML2.XML.Signature
    SAML2.XML.Encryption
    SAML2.XML.Types
    SAML2.XML.Lint
    SAML2.Core
    SAML2.Core.Namespaces
    SAML2.Core.Datatypes
    SAML2.Core.Assertions
    SAML2.Core.Protocols
    SAML2.Core.Versioning
    SAML2.Core.Identifiers
    SAML2.Profiles
    SAML2.Profiles.ConfirmationMethod
    SAML2.Bindings
    SAML2.Bindings.Identifiers
  other-modules:
    SAML2.XML.Pickle
  build-depends:       
    base >=4.8 && <5,
    bytestring,
    time,
    network-uri,
    hxt,
    hxt-charproperties,
    semigroups,
    invertible,
    base64-bytestring,
    cryptonite,
    process
  default-language:    Haskell2010
  ghc-options: -Wall
  build-tools: xmllint

test-suite tests
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
    base,
    bytestring,
    network-uri,
    hxt,
    hxt-http,
    semigroups,
    hsaml2,
    HUnit
